--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
-  <link rel="stylesheet" href="/src/styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css">
   <script src="https://kit.fontawesome.com/bf4a890836.js"></script>
   <title>weather</title>
 </head>
